# stitch

./: .gitignore  README.md  gui_app.py  gui_app.spec  pyproject.toml  stitch_cli.py
.github/workflows/: README.md  draft-pdf.yml
benchmarks/: benchmark_linkage.py  benchmark_parallel.py
paper/: paper.bib  paper.md
scripts/: hook-PyQt6.py  hook-jaraco.py
stitch/: __init__.py  daily_measure.py  hrs.py  io_utils.py  process.py  temporal.py
stitch/gui/: README.md  job.py  main_window.py  validators.py
stitch/gui/pages/: contextual_data_page.py  execution_page.py  hrs_data_page.py  pipeline_config_page.py  residential_history_page.py
tests/: README.md  conftest.py  convert_to_stata.py  data_generators.py  test_cli_args.py  test_cli_resolution.py  test_datetime_inference.py  test_end_to_end_linkage.py  test_gui_dashboard.py  test_gui_resolution.py  test_gui_validators.py  test_hrs_integer_normalization.py  test_integration.py  test_io.py  test_linkage_cases.py  test_multicolumn_linkage.py  test_per_month_files.py  test_performance_batch_vs_parallel.py  test_performance_no_residential_history.py  test_post_lag_average.py  test_resolution_linkage.py  test_temp_lag_isolation.py  test_temporal_resolution_matrix.py
