[project]
name = "stitch"
version = "0.1.0"
description = "STITCH - A Spatio-Temporal Integration Tool for Contextual enricHment of survey and observational data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "pyarrow>=10.0.0",
    "pyqt6>=6.4.0",
    "pytest>=7.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
stitch-cli = "link_lags:main"
stitch-gui = "gui_app:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# For GUI tests in headless environments, set: QT_QPA_PLATFORM=offscreen
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[dependency-groups]
dev = [
    "jaraco-context>=6.0.1",
    "jaraco-functools>=4.3.0",
    "jaraco-text>=4.0.0",
    "pyinstaller>=6.17.0",
    "pytest-env>=1.0.0",
    "pytest-qt>=4.0.0",
]
